--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -26,8 +26,76 @@
    "outputs": [],
    "source": [
     "\"\"\"\n",
+    "1) 10/30\n",
+    "2) 10/30 * 8/29\n",
+    "3) 10/30 * 9/30\n",
     "your solution here\n",
     "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.23645320197044334"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "((10/30)*(12/29)*(8/28)) *6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.23552\n"
+     ]
+    }
+   ],
+   "source": [
+    "balls = [\"W\"]*10 +[\"R\"]*12 +[\"B\"]*8\n",
+    "counter =0\n",
+    "range_=100000\n",
+    "for i in range(range_):\n",
+    "    rand_choice = random.sample(balls, k=3)\n",
+    "    if len(set(rand_choice))==3:\n",
+    "        counter = counter + 1\n",
+    "print(counter/range_)     \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1:  0.3333333333333333\n",
+      "2:  0.09195402298850575\n",
+      "3:  0.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"1: \", 10/30)\n",
+    "print(\"2: \", 10/30 * 8/29)\n",
+    "print(\"3: \", 10/30 * 9/30)"
    ]
   },
   {
@@ -47,13 +115,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rainy_proability:  0.32\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "your solution here\n",
-    "\"\"\""
+    "\"\"\"\n",
+    "\n",
+    "rainy_proability = 0.4*0.5 + 0.6*0.2\n",
+    "print(\"rainy_proability: \", rainy_proability)"
    ]
   },
   {
@@ -82,6 +161,14 @@
    "outputs": [],
    "source": [
     "\"\"\"\n",
+    "\n",
+    "𝑃(𝐴⎯⎯⎯⎯)=0.7  TRUE\n",
+    "𝑃(𝐴∪𝐵)=0.6  (0.3 + 0.6 -0) False\n",
+    "𝑃(𝐴∩𝐵⎯⎯⎯⎯)=0.2 =0.12 TRUE \n",
+    "𝑃(𝐴∪𝐴⎯⎯⎯⎯)=1  TRUE\n",
+    "𝑃(𝐴∩(𝐵∪𝐵⎯⎯⎯⎯))=0.4 False\n",
+    "𝑃(𝐴⎯⎯⎯⎯∩𝐵⎯⎯⎯⎯)=0.3 False\n",
+    "𝑃(𝐴∩𝐵⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯)=0.9 TRUE\n",
     "your solution here\n",
     "\"\"\""
    ]
@@ -104,22 +191,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.047619047619047616"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "probability_go_china = 1/6\n",
+    "probability_go_china = 5/6\n",
+    "\n",
+    "prob_get_covid_in_china = 0.01\n",
+    "prob_get_covid_in_italy = 0.2\n",
+    "\n",
+    "prob_have_travel_china_if_i_got_covid = (probability_go_china*prob_get_covid_in_china) / (probability_go_china*prob_get_covid_in_china + probability_go_china*prob_get_covid_in_italy)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.047619047619047616"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "your solution here\n",
-    "\"\"\""
+    "\"\"\"\n",
+    "prob_have_travel_china_if_i_got_covid"
    ]
   },
   {
@@ -128,7 +246,9 @@
    "source": [
     "## BONUS\n",
     "\n",
-    "You roll 2 dice. What is the probability that the sum of the numbers is 7? And 8? And 9? Then simulate 10000 times and draw a countplot."
+    "You roll 2 dice. What is the probability that the sum of the numbers is 7? And 8? And 9? Then simulate ## BONUS\n",
+    "\n",
+    "You roll 2 dice. What is the probability that the sum of the numbers is 7? And 8? And 9? Then simulate 10000 times and draw a countplot. times and draw a countplot."
    ]
   },
   {
@@ -140,11 +260,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "prob_7:  0.16666666666666666\n",
+      "prob_8:  0.1388888888888889\n",
+      "prob_9:  0.1111111111111111\n",
+      "counter_7:  0.1627\n",
+      "counter_8:  0.1439\n",
+      "counter_9:  0.1124\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "import random\n",
+    "# your code here\n",
+    "prob_7 = (1/36)*6\n",
+    "prob_8 = (1/36)*5\n",
+    "prob_9 = (1/36)*4\n",
+    "print (\"prob_7: \", prob_7)\n",
+    "print (\"prob_8: \", prob_8)\n",
+    "print (\"prob_9: \", prob_9)\n",
+    "rango = 10000\n",
+    "counter_7 = 0\n",
+    "\n",
+    "for i in range(rango):\n",
+    "    if sum(random.choices([1, 2, 3, 4, 5, 6], k=2)) == 7:\n",
+    "        counter_7 += 1\n",
+    "        \n",
+    "counter_8 = 0\n",
+    "\n",
+    "for i in range(rango):\n",
+    "    if sum(random.choices([1, 2, 3, 4, 5, 6], k=2)) == 8:\n",
+    "        counter_8 += 1\n",
+    "        \n",
+    "counter_9 = 0\n",
+    "\n",
+    "for i in range(rango):\n",
+    "    if sum(random.choices([1, 2, 3, 4, 5, 6], k=2)) == 9:\n",
+    "        counter_9 += 1\n",
+    "        \n",
+    "print (\"counter_7: \", counter_7/rango) \n",
+    "print (\"counter_8: \", counter_8/rango)\n",
+    "print (\"counter_9: \", counter_9/rango)"
    ]
   },
   {
@@ -175,7 +337,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.8"
   },
   "toc": {
    "base_numbering": 1,
