--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -21,13 +21,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"\n",
-    "your solution here\n",
-    "\"\"\""
+    "import random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.3333333333333333"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p_white = 10/(10+12+8)\n",
+    "p_white"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.09195402298850575"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p_w_and_b_replace = (10/30)*(8/29)\n",
+    "p_w_and_b_replace"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.08888888888888888"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p_w_and_b_noreplace = (10/30)*(8/30)\n",
+    "p_w_and_b_noreplace"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.23645320197044334"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p_three_dif = ((10/30) * (12/29) * (8/28))*6\n",
+    "p_three_dif"
    ]
   },
   {
@@ -47,13 +129,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.32"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\"\n",
-    "your solution here\n",
-    "\"\"\""
+    "P(R) = P(R|C).P(C) + P(R|NC).P(NC)\n",
+    "\"\"\"\n",
+    "p_cloudy = 0.4\n",
+    "p_rainy_giventhat_cloudy = 0.5\n",
+    "p_rainy_giventhat_notcloudy = 0.2\n",
+    "p_nor_cloudy = 1 - p_cloudy\n",
+    "#then:\n",
+    "\n",
+    "p_rainy = p_rainy_giventhat_cloudy * p_cloudy + p_rainy_giventhat_notcloudy * p_nor_cloudy\n",
+    "p_rainy"
    ]
   },
   {
@@ -82,7 +183,19 @@
    "outputs": [],
    "source": [
     "\"\"\"\n",
-    "your solution here\n",
+    "P(NA) = 1 - P(A) = 1 - 0.7 = 0.3                           ==> True\n",
+    "\n",
+    "P(A ∪ B) = P(A) + P(B) - P(A ∩ B) = 0.3 + 0.6 - 0.1 = 0.8 ==> False\n",
+    "\n",
+    "P(A ∩ NB) = P(A) - P(A ∩ B) = 0.3 - 0.1 = 0.2              ==> True\n",
+    "\n",
+    "P(A ∪ NA) = P(A) + P(NA) - P(A ∩ NA) = 0.3 + 0.7 - 0 = 1   ==> True\n",
+    "\n",
+    "P(A ∩ (P(B ∪ NB))) = P(A) * [P(B) + P(NB) - P(B ∩ NB)] = 0.4 . 1 ==> False\n",
+    "\n",
+    "P(NA ∩ NB) = P(N(A ∪ B)) =  1 - P(A ∪ B)  = 0.2                ==> False\n",
+    "\n",
+    "P(N(A ∩ B)) = 1 - P(A ∩ B) = 0.9                            ==> True\n",
     "\"\"\""
    ]
   },
@@ -104,22 +217,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# your code here"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.2"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\"\n",
-    "your solution here\n",
-    "\"\"\""
+    "P(cov | china) = 0.01\n",
+    "P(cov | italy) = 0.2\n",
+    "P(italy) = 1/6\n",
+    "P(china) = 5/6\n",
+    "P(china | cov) = ?\n",
+    "\n",
+    "Bayes -->\n",
+    "\n",
+    "P(china | cov) = [P(cov | china) * P(china)] / [P(cov | china) * P(china) + P(cov | italy) * P(italy)]\n",
+    "\n",
+    "P(china | cov) = (0.01 * 5/6) / [(0.01 * 5/6) + (0.2 * 1/6)] = 0.2 \n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "p_china_giventhat_cov = (0.01 * 5/6) / ((0.01 * 5/6) + (0.2 * 1/6))\n",
+    "p_china_giventhat_cov"
    ]
   },
   {
@@ -144,7 +273,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "p_7 = ((1/6)*(1/6))*6\n",
+    "p_8 = ((1/6)*(1/6))*5\n",
+    "p_9 = ((1/6)*(1/6))*4\n",
+    "\n",
+    "p_7, p_9, p_8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3, 1]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rolls = random.choices([1, 2, 3, 4, 5, 6], k=2)\n",
+    "rolls"
    ]
   },
   {
@@ -152,11 +306,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "\"\"\"\n",
-    "your solution here\n",
-    "\"\"\""
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -175,7 +325,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.10"
   },
   "toc": {
    "base_numbering": 1,
