--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -20,14 +20,72 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "\"\"\"\n",
-    "your solution here\n",
-    "\"\"\""
+    "probability of take a white ball\n",
+    "\n",
+    "$P(W) = \\frac{10}{30} = 0.33 = 33\\%$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "probability of take a white ball on first extraction and a black ball out on second extraction without replacing the first one\n",
+    "\n",
+    "$P(W) = \\frac{10}{30} = 0.33 = 33\\%$\n",
+    "\n",
+    "$P(B) = \\frac{8}{29} = 0.27 = 27\\%$\n",
+    "\n",
+    "$W$, $B$ independent $\\Rightarrow$ $P(W \\cap B)=P(W) * P(B) = 0.089 = 8.9\\%$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "probability of take a white ball on first extraction and a black ball out on second extraction replacing the first one\n",
+    "\n",
+    "$P(W) = \\frac{10}{30} = 0.33 = 33\\%$\n",
+    "\n",
+    "$P(B) = \\frac{8}{30} = 0.26 = 26\\%$\n",
+    "\n",
+    "$W$, $B$ independent $\\Rightarrow$ $P(W \\cap B)=P(W) * P(B) = 0.085 = 8.5\\%$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "probability of take 3 balls and them being all different colours AT THE SAME TIME\n",
+    "\n",
+    "$P(W) = \\frac{10}{30} = 0.33 = 33\\%$\n",
+    "\n",
+    "$P(B) = \\frac{8}{30} = 0.26 = 26\\%$\n",
+    "\n",
+    "$P(R) = \\frac{12}{30} = 0.4 = 40\\%$\n",
+    "\n",
+    "$W$, $B$ dependent $\\Rightarrow$ $P(W \\cap B \\cap R)=P(W) * P(B|W) * P(R|B) = 0.33 * 0.26 * 0.4 = 0.0034 = 0.34\\%$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "probability of take 3 balls and them being all different colours\n",
+    "\n",
+    "$P(W) = \\frac{10}{30} = 0.33 = 33\\%$\n",
+    "\n",
+    "$P(B) = \\frac{8}{29} = 0.27 = 26\\%$\n",
+    "\n",
+    "$P(R) = \\frac{12}{28} = 0.42 = 42\\%$\n",
+    "\n",
+    "$W$, $B$, $B$ independent $\\Rightarrow$ $P(W \\cup B \\cup R)=P(W) * P(B) * P(R) = 0.33 * 0.27 * 0.42 = 0.037 = 3.7\\%$\n",
+    "\n",
+    "hay 6 combinatorias. todas ellas obtenemos que la prob es $3.7\\%$\n",
+    "\n",
+    "la probailidad final es la suma de todas ellas ó 0.037 * 6 = 0.22 = $22\\%$"
    ]
   },
   {
@@ -46,14 +104,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "\"\"\"\n",
-    "your solution here\n",
-    "\"\"\""
+    "$P(rain) = P(cloud) * P(rain | cloud) + P(no-cloud) * P(rain | no-cloud)$\n",
+    "\n",
+    "$P(rain) = 0.6 * 0.2 + 0.4 * 0.5 = 0.32 = 32\\%$"
    ]
   },
   {
@@ -76,14 +132,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "\"\"\"\n",
-    "your solution here\n",
-    "\"\"\""
+    "* $P(\\overline{A}) = 0.7$ $\\Rightarrow$ TRUE\n",
+    "\n",
+    "* $P(A \\cup B) = 0.6$ $\\Rightarrow$ FALSE\n",
+    "\n",
+    "* $P(A \\cap \\overline{B}) = 0.2$ $\\Rightarrow$ FALSE\n",
+    "\n",
+    "* $P(A \\cup \\overline{A}) = 1$ $\\Rightarrow$ TRUE\n",
+    "\n",
+    "* $P(A \\cap (B \\cup \\overline{B})) = 0.4$ $\\Rightarrow$ FALSE\n",
+    "\n",
+    "* $P(\\overline{A} \\cap \\overline{B}) = 0.3$ $\\Rightarrow$ FALSE\n",
+    " \n",
+    "* $P(\\overline{A \\cap B}) = 0.9$ $\\Rightarrow$ TRUE"
    ]
   },
   {
@@ -113,13 +177,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"\n",
-    "your solution here\n",
-    "\"\"\""
+    "import random\n",
+    "\n",
+    "def dice():\n",
+    "    dado = []\n",
+    "    dado.append(random.choice(range(1,7)))\n",
+    "    return dado"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "la probabilidad de viajar a china "
    ]
   },
   {
@@ -161,9 +235,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "ironhack",
    "language": "python",
-   "name": "python3"
+   "name": "ironhack"
   },
   "language_info": {
    "codemirror_mode": {
@@ -175,7 +249,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.11"
   },
   "toc": {
    "base_numbering": 1,
